# jureca_exolaunch

./: .gitignore  .launch-binned.sh.swo  README.md  cancel.sh  check-all-meson.py  check-all-peram.py  check_relaunch_sdb_h5.sh  env-new-jureca-gpu.sh  exolaunch-engine.py  exolaunch.py  extract-cfg.py  get_times.py  launch-binned-example.sh  launch-binned.sh  launch-meson-l32t64.sh  launch-peram-l32t64.sh  launch-peram_charm-l32t64.sh  launch_eigs.sh  meson-h5.sh  move-files-before.sh  perams-h5.sh  perams_strange-h5.sh  pyproject.toml  qdp-objects.md  read-eigs.md  remove_larger.py  rename-ini.py  rerun-custom.sh  rerun-failed-configs.py  rerun_peram_strange_96_tsrc24_1.sh  rm-files.py  run-contract.sh  test-check.sh  test-launch.sh  test-sdb-relaunch.sh  test-tsrc.py  times.txt  timings.txt
clean-scripts/: clean_dirs.sh  clean_sdb.sh  modify_file_names.sh  rename-ini.py  rm-dirs.py
scripts/: create-eigs.sh  create-meson-peram-binned.sh  create-mesons.sh  create-peram.sh  create-perams.sh  create_binned_tasks.py  create_mesons.sh  create_peram_clov.sh  create_tasks.py
scripts/ens_files/: b3.6_ms0.25_mud-0.013_s32t64.yml  b3.70_ms0.000_mud-0.022_s32t96.yml  eric-ens.yml
scripts/templates/: baryon.jinja.xml  baryon_juwels.sh.j2  baryonbase.jinja.xml  disco.jinja.xml  disco.sh.j2  eigs.jinja.xml  eigs_binned.sh.j2  eigs_juwels.sh.j2  eigs_regular.jinja.xml  meson.jinja.xml  meson_binned.sh.j2  meson_jureca.sh.j2  meson_juwels.sh.j2  peram.jinja.xml  peram_charm_clover.sh.j2  peram_charm_mg.sh.j2  peram_charm_mg_binned.sh.j2  (+9 more)
sdb_to_h5/: test_convert_peram.sh
(+6 files in other folders)
